--- a/Node2/Node2/Debug/Makefile
+++ b/Node2/Node2/Debug/Makefile
@@ -43,8 +43,10 @@ C_SRCS +=  \
 ../game.c \
 ../joy.c \
 ../mcp.c \
+../motor_controller.c \
 ../motor_driver.c \
 ../Node2.c \
+../pid.c \
 ../pwm.c \
 ../spi.c \
 ../twi_master.c \
@@ -64,8 +66,10 @@ dac.o \
 game.o \
 joy.o \
 mcp.o \
+motor_controller.o \
 motor_driver.o \
 Node2.o \
+pid.o \
 pwm.o \
 spi.o \
 twi_master.o \
@@ -78,8 +82,10 @@ dac.o \
 game.o \
 joy.o \
 mcp.o \
+motor_controller.o \
 motor_driver.o \
 Node2.o \
+pid.o \
 pwm.o \
 spi.o \
 twi_master.o \
@@ -92,8 +98,10 @@ dac.d \
 game.d \
 joy.d \
 mcp.d \
+motor_controller.d \
 motor_driver.d \
 Node2.d \
+pid.d \
 pwm.d \
 spi.d \
 twi_master.d \
@@ -106,8 +114,10 @@ dac.d \
 game.d \
 joy.d \
 mcp.d \
+motor_controller.d \
 motor_driver.d \
 Node2.d \
+pid.d \
 pwm.d \
 spi.d \
 twi_master.d \
@@ -127,6 +137,10 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
+
+
 
 
 
@@ -184,7 +198,7 @@ all: $(OUTPUT_FILE_PATH) $(ADDITIONAL_DEPENDENCIES)
 $(OUTPUT_FILE_PATH): $(OBJS) $(USER_OBJS) $(OUTPUT_FILE_DEP) $(LIB_DEP) $(LINKER_SCRIPT_DEP)
 	@echo Building target: $@
 	@echo Invoking: AVR/GNU Linker : 4.8.1
-	$(QUOTE)C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="Node2.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=atmega2560  
+	$(QUOTE)C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE) -o$(OUTPUT_FILE_PATH_AS_ARGS) $(OBJS_AS_ARGS) $(USER_OBJS) $(LIBS) -Wl,-Map="Node2.map" -Wl,--start-group -Wl,-lm  -Wl,--end-group -Wl,--gc-sections -mrelax -mmcu=atmega2560 -Wl,-u,vfprintf -lprintf_flt -lm  
 	@echo Finished building target: $@
 	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -O ihex -R .eeprom -R .fuse -R .lock -R .signature -R .user_signatures  "Node2.elf" "Node2.hex"
 	"C:\Program Files (x86)\Atmel\Atmel Toolchain\AVR8 GCC\Native\3.4.1061\avr8-gnu-toolchain\bin\avr-objcopy.exe" -j .eeprom  --set-section-flags=.eeprom=alloc,load --change-section-lma .eeprom=0  --no-change-warnings -O ihex "Node2.elf" "Node2.eep" || exit 0
